// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox #render() should render error message box 1`] = `
<div
  className="ui-messageBox ui-messageBox_type_error"
>
  Ooops... this is an error!
</div>
`;

exports[`MessageBox #render() should render info message box 1`] = `
<div
  className="ui-messageBox ui-messageBox_type_info"
>
  Just a info message box
</div>
`;

exports[`MessageBox #render() should render only message box 1`] = `
<div
  className="ui-messageBox ui-messageBox_test"
>
  Just a simple message box
</div>
`;
